Made a few cosmetic changes to the README.

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Overview
 ========
 
 Rainbeard is a next-generation trust network based on the principles of local
-trust. See http://raincode.org/ for details on how it work.
+trust. See http://raincode.org/ for details on how it works.
 
 Rainbeard is licensed under the GNU AGPL v3.
 
@@ -18,7 +18,7 @@ To run the test suite, you should also have the following software installed:
 * coverage.py - http://nedbatchelder.com/code/coverage/
 * django test_coverage - http://opensource.55minutes.com/
 
-Installing these should be as easy as:
+Installing these should be straightforward:
 easy_install pytidylib
 easy_install coverage
 svn co http://opensource.55minutes.com/svn/python/trunk/django/apps/test_coverage/
@@ -26,8 +26,9 @@ svn co http://opensource.55minutes.com/svn/python/trunk/django/apps/test_coverag
 Installation
 ============
 
-Rainbeard is designed to have a one-to-one relationship with the site - that is
-to say, it may not coexist well with other apps.
+Rainbeard is technically a django app, but is designed to have a one-to-one
+relationship with the site - that is to say, it may not coexist well with other
+django apps.
 
 The following steps should get you up and running:
 
@@ -40,11 +41,11 @@ $ git clone git://github.com/bholley/rainbeard.git
 
 2 - Edit settings.py
 
-First configure your database. Sqlite is probably fine for
-non-stresstest development. Add /my/code/rainsite to the TEMPLATE_DIRS list.
-Next, comment out the CSRF middleware (this will be fixed before the first
-release). Then, add 'rainbeard' to INSTALLED_APPS. Finally, at the bottom of
-the file, add:
+First configure your database. Sqlite is probably fine for all development that
+doesn't involve performance testing. After setting up the database, add
+/my/code/rainsite to the TEMPLATE_DIRS list. Next, comment out the CSRF
+middleware (this will be fixed before the first release). Then, add 'rainbeard'
+to INSTALLED_APPS. Finally, at the bottom of the file, add:
 
 from rainbeard.settings import *
 
@@ -54,7 +55,7 @@ Add the following line to the top of the file:
 
 from rainbeard.urls import urls as rainbeard_urls
 
-Add the following line to your url patterns:
+Next, add the following line to your url patterns:
 
 url(r'', include(rainbeard_urls))
 
@@ -83,7 +84,7 @@ from test_coverage.settings import *
 COVERAGE_REPORT_HTML_OUTPUT_DIR = '/where/i/want/the/coverage_report'
 
 Make sure you create the directory where the coverage report will be placed. If
-you don't, it will throw an exception.
+you don't, test_coverage will throw an exception.
 
 $ ./manage.py test_coverage rainbeard
 
@@ -102,7 +103,7 @@ maintainer to make sure you're on the same page before putting a lot of work
 into a feature.
 
 Git-style patches and GitHub pull requests are equally acceptable ways to submit
-code. Both should be directed to the maintainer.
+code. Both should be directed at the maintainer.
 
 Any and all new code must have complete test coverage. Bug fixes should include
 tests that fail without the fix. Nothing will be considered without tests. They
