--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,4 @@ source code. The specific contributions of each author can be determined by
 examining the repository history.
 
 Founder / Initial Developer: Bobby Holley <bobbyholley@gmail.com>
+Propellorhead: Jan Overgoor <janovergoor@gmail.com>
